--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -219,3 +219,102 @@ span#right-icon {
 .cat-drop {
     z-index: 9999;
 }
+
+.nav-link.active {
+    background: none !important;
+    color: orange !important;
+}
+
+.nav-link {
+    color: black !important;
+    font-size: 20px !important;
+}
+ul#pills-tab {
+    border-bottom: 1px solid lightgray;
+}
+.product-single-box {
+    background: white;
+    padding: 7px;
+    text-align: center;
+    border-radius: 7px;
+}
+
+.prod-image a img:last-child {
+    position: absolute;
+    max-width: 170px;
+    left: 0;
+    transition: .6s;
+    opacity: 0;
+}
+
+.prod-image {
+    position: relative;
+    overflow: hidden;
+}
+.prod-image img:last-child:hover
+{
+    opacity: 1;
+    transform: scale(1.05);
+}
+.prod-name {
+    margin-top: 10px;
+}
+
+.prod-name a {
+    text-decoration: none;
+    color: black !important;
+    font-size: 14px;
+}
+
+.prod-price {
+    margin-top: 10px;
+}
+
+.prod-price span {
+    font-size: 14px;
+}
+.cart-btn a {
+    text-decoration: none !important;
+    color: white !important;
+    background: black;
+    padding: 6px 21px;
+    border-radius: 7px;
+}
+
+.cart-btn {
+    margin-top: 13px;
+    /* position: relative; */
+    /* overflow: hidden; */
+}
+
+.cart-btn a {
+    position: relative;
+    overflow: hidden;
+}
+span.cart-t {
+    position: absolute;
+    left: 24px;
+    transition: .3s;
+}
+
+span#cart-i {
+    position: absolute;
+    left: 50px;
+    transition: .3s;
+    transform: translate(0px, 34px);
+}
+
+a.cart-btn-l {
+    padding: 8px 62px;
+    align-items: center;
+    justify-content: center;
+}
+
+a.cart-btn-l:hover>span#cart-i
+{
+    transform: translate(0px, 0px);
+}
+a.cart-btn-l:hover>span.cart-t
+{
+    transform: translate(0px, -30px);
+}
